<resources>
    <string name="app_name">lore1</string>
    <string name="button">Button</string>
    <string name="tryit">Try it!</string>
    <string name="login">LOGIN</string>
    <string name="sign_in">SIGN IN</string>
    <string name="lore">LORE</string>
    <string name="try_it">TRY IT!</string>
    <string name="traductor_de_texto">TRADUCTOR DE TEXTO</string>
    <string name="traductor_de_audio">TRADUCTOR DE AUDIO</string>
    <string name="traduccion_de_texto">TRADUCCION DE TEXTO</string>
    <string name="no_connection">No internet connection! Cannot be translated!</string>
    <string name="introduce_el_texto_a_traducir">Introduce el texto a traducir:</string>
    <string name="traducir">TRADUCIR</string>
    <string name="textview">TextView</string>
    <string name="idioma">IDIOMA</string>
    <string name="Button_camara_image">Botton imagen</string>
    <string name="slot_camara">imagen guardada</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>