<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tryit">

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="413dp"
        android:layout_height="66dp"
        android:layout_marginStart="30dp"
        android:autofillHints=""
        android:background="@color/teal_200"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:text="@string/try_it"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/tryit_texto"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="104dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/traductor_de_texto"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <Button
        android:id="@+id/tryit_audio"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/traductor_de_audio"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tryit_imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tryit_texto" />

    <Button
        android:id="@+id/tryit_imagen"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="104dp"
        android:backgroundTint="@color/teal_200"
        android:text="TRADUCTOR DE IMAGEN"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tryit_audio" />
</androidx.constraintlayout.widget.ConstraintLayout>