<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TraduccionTexto">

    <Button
        android:id="@+id/boton_sentimientos"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="52dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="EMOCIÓN"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cajita_texto" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="413dp"
        android:layout_height="66dp"
        android:layout_marginStart="30dp"
        android:autoText="false"
        android:autofillHints=""
        android:background="@color/teal_200"
        android:ems="10"
        android:fontFamily="monospace"
        android:inputType="textPersonName"
        android:text="  TRADUCCIÓN DE TEXTO"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="276dp"
        android:layout_height="0dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="74dp"
        app:layout_constraintBottom_toTopOf="@+id/cajita_texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/cajita_texto"
        android:layout_width="319dp"
        android:layout_height="149dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="424dp"
        android:hint="@string/introduce_el_texto_a_traducir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
        app:layout_constraintVertical_bias="0.692" />

    <Button
        android:id="@+id/boton_traducir"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="302dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/traducir"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cajita_texto"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ver_traduccion"
        android:layout_width="293dp"
        android:layout_height="126dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="184dp"
        android:text="Texto traducido o emoción general."
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_traducir"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/selec_idioma"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/idioma"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/boton_sentimientos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cajita_texto" />

</androidx.constraintlayout.widget.ConstraintLayout>